--- a/bsp/stm32/libraries/STM32F1xx_HAL/SConscript
+++ b/bsp/stm32/libraries/STM32F1xx_HAL/SConscript
@@ -17,6 +17,7 @@ STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c
 STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c
 STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cec.c
 STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_sram.c
+STM32F1xx_HAL_Driver/Src/stm32f1xx_ll_fsmc.c
 """)
 
 if GetDepend(['RT_USING_PIN']):
